# zaliczenie-cpp

./: .gitignore  CMakeLists.txt  README.md  loader.cpp  loader.h  main.cpp  proj-zaliczeniowy-cpp.kdev4  sequence.cpp  sequence.h  transcription.cpp  transcription.h  translation.cpp  translation.h
